--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                 <version>3.2.2</version>
                 <configuration>
                     <includes>
-                        <include>**\test\java\RunCucumberTest.java</include>
+                        <include>**/*Test.java</include>
                     </includes>
                 </configuration>
             </plugin>
